test/pass/lambdas/lambda_hash_inference.lily
var h = ["+" => (|a: Integer, b: Integer| a + b),
         "-" => (|a, b| a - b),
         "*" => (|a, b| a * b),
         "/" => (|a, b| a / b)]
