test/fail/lambdas/lambda_optargs.lily
#[
SyntaxError: Expected 'a label', not '*'.
    from lambda_optargs.lily:6:
]#

var v = (|a: *Integer=10| a )
